# dragonfly-impl

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
example/: Saucer.cpp  Saucer.h  Star.cpp  Star.h  game.cpp
include/: Clock.h  Color.h  DisplayManager.h  Event.h  EventKeyboard.h  EventMouse.h  EventStep.h  GameManager.h  InputManager.h  LogManager.h  Manager.h  Object.h  ObjectList.h  ObjectListIterator.h  Saucer.h  Vector.h  WorldManager.h
src/: Clock.cpp  DisplayManager.cpp  Event.cpp  EventKeyboard.cpp  EventMouse.cpp  EventStep.cpp  GameManager.cpp  GameOver.cpp  InputManager.cpp  LogManager.cpp  Manager.cpp  Object.cpp  ObjectList.cpp  ObjectListIterator.cpp  Vector.cpp  WorldManager.cpp  game.cpp
test/: test_Clock.cpp  test_EventStep.cpp  test_GameManager.cpp  test_Hello.cpp  test_InputManager.cpp  test_Manager.cpp  test_Object.cpp  test_ObjectList.cpp  test_ObjectListIterator.cpp  test_Vector.cpp  test_WorldManager.cpp
